change to leases and properties and update routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,9 @@
     <ion-content>
         <ion-list>
           <ion-menu-toggle menu="m1">
-            <ion-item lines="none" routerLink="/places/tabs/discover" button>
+            <ion-item lines="none" routerLink="/places/tabs/notifications" button>
               <ion-icon name="business" slot="start"></ion-icon>
-              <ion-label>Discover Places</ion-label>
+              <ion-label>Notifications</ion-label>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle menu="m1">
