--- a/src/app/places/notifications/notification-details/notification-details.page.html
+++ b/src/app/places/notifications/notification-details/notification-details.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot='start'>
-      <ion-back-button defaultHref="/places/tabs/discover"></ion-back-button>
+      <ion-back-button defaultHref="/places/tabs/notifications"></ion-back-button>
     </ion-buttons>
     <ion-title>Notification Details</ion-title>
   </ion-toolbar>
