--- a/src/app/places/notifications/notifications.page.html
+++ b/src/app/places/notifications/notifications.page.html
@@ -56,7 +56,7 @@
         <ion-col size="12" size-sm="12" offset-sm="0" text-center>
           <ion-list>
           <ion-item *ngFor="let place of loadedPlaces.slice(1)"
-              [routerLink]="['/', 'places', 'tabs', 'discover', place.id ]" detail >
+              [routerLink]="['/', 'places', 'tabs', 'notifications', place.id ]" detail >
             <!-- <ion-thumbnail slot="start">
               <ion-img [src]="place.imageUrl"></ion-img>
             </ion-thumbnail> -->
