--- a/src/app/places/places.page.html
+++ b/src/app/places/places.page.html
@@ -1,13 +1,21 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="discover">
+    <ion-tab-button tab="notifications">
       <ion-label>Notifications</ion-label>
         <ion-icon name="notifications"></ion-icon>
     </ion-tab-button>
-    <ion-tab-button tab="offers">
+    <ion-tab-button tab="properties">
         <ion-label>Properties</ion-label>
         <ion-icon name="home"></ion-icon>
     </ion-tab-button>
+    <ion-tab-button tab="properties">
+        <ion-label>Leases</ion-label>
+        <ion-icon name="home"></ion-icon>
+    </ion-tab-button>
+    <!-- <ion-tab-button tab="properties">
+        <ion-label>Open Service Requests</ion-label>
+        <ion-icon name="home"></ion-icon>
+    </ion-tab-button> -->
   </ion-tab-bar>
 </ion-tabs>
 
