--- a/src/app/places/properties/offer-item/offer-item.component.html
+++ b/src/app/places/properties/offer-item/offer-item.component.html
@@ -1,4 +1,4 @@
-<ion-item  [routerLink]="['/', 'places', 'tabs', 'offers', offer.id]">
+<ion-item  [routerLink]="['/', 'places', 'tabs', 'properties', offer.id]">
   <ion-thumbnail slot="start">
     <ion-img [src]="offer.imageUrl"></ion-img>
   </ion-thumbnail>
