--- a/src/app/places/properties/properties.page.html
+++ b/src/app/places/properties/properties.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>Properties</ion-title>
     <ion-buttons slot="primary">
-      <ion-button routerLink="/places/tabs/offers/new">
+      <ion-button routerLink="/places/tabs/properties/new">
         <ion-icon name="add" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
