new lease and new property components

--- a/src/app/places/places.page.html
+++ b/src/app/places/places.page.html
@@ -8,7 +8,7 @@
         <ion-label>Properties</ion-label>
         <ion-icon name="home"></ion-icon>
     </ion-tab-button>
-    <ion-tab-button tab="properties">
+    <ion-tab-button tab="leases">
         <ion-label>Leases</ion-label>
         <ion-icon name="home"></ion-icon>
     </ion-tab-button>
