--- a/src/app/places/properties/properties.page.html
+++ b/src/app/places/properties/properties.page.html
@@ -18,7 +18,7 @@
       <ion-col size="12" size-sm="12" offset-sm="0">
         <ion-list>
           <ion-item-sliding *ngFor="let offer of offers" #slidingItem>
-           <app-offer-item [offer]="offer"></app-offer-item>
+           <app-proeprty-item [offer]="offer"></app-property-item>
           <ion-item-options side="end">
             <ion-item-option color="secondary" (click)="onEdit(offer.id, slidingItem)">
               <ion-icon name="create" slot="icon-only"></ion-icon>
