--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,11 +14,17 @@
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle menu="m1">
-            <ion-item lines="none" routerLink="/bookings" button>
+            <ion-item lines="none" routerLink="/places/tabs/properties" button>
               <ion-icon name="checkbox-outline" slot="start"></ion-icon>
-              <ion-label>Your Bookings</ion-label>
+              <ion-label>Properties</ion-label>
             </ion-item>
             </ion-menu-toggle>
+            <ion-menu-toggle menu="m1">
+              <ion-item lines="none" routerLink="/places/tabs/leases" button>
+                <ion-icon name="checkbox-outline" slot="start"></ion-icon>
+                <ion-label>Leases</ion-label>
+              </ion-item>
+              </ion-menu-toggle>
             <ion-menu-toggle menu="m1">
             <ion-item lines="none" (click)="onLogout()" button>
                 <ion-icon name="exit" slot="start"></ion-icon>
