--- a/src/app/places/leases/leases.page.html
+++ b/src/app/places/leases/leases.page.html
@@ -1,33 +1,41 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot='start'>
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title> Your Bookings</ion-title>
-  </ion-toolbar>
-</ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button menu="m1"></ion-menu-button>
+      </ion-buttons>
+      <ion-title>Leases</ion-title>
+      <ion-buttons slot="primary">
+        <ion-button routerLink="/places/tabs/leases/new">
+          <ion-icon name="add" slot="icon-only"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
 
-<ion-content padding>
+<ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col size-md="6" offset-md="3">
+      <ion-col size="12" size-sm="12" offset-sm="0" text-center>
         <ion-list>
-            <ion-item-sliding *ngFor="let booking of loadedBookings" #slidingBooking>
-              <ion-item>
-                <ion-label>
-                  <h5>{{booking.placeTitle}}</h5>
-                  <p>Guests: {{booking.guestNumber}}</p>
-                </ion-label>
-              </ion-item>
-              <ion-item-options>
-                <ion-item-option color="danger" (click)="onCancelBooking(booking.id, slidingBooking)">
-                  <ion-icon name="trash" slot="icon-only"></ion-icon>
-                </ion-item-option>
-              </ion-item-options>
-            </ion-item-sliding>
-          </ion-list>
+        <ion-item
+            [routerLink]="['/', 'places', 'tabs', 'leases', leaseId ]" detail >
+          <!-- <ion-thumbnail slot="start">
+            <ion-img [src]="place.imageUrl"></ion-img>
+          </ion-thumbnail> -->
+          <ion-label text-center>
+            <h2>1234 5th Street Cocoa Beach, FL 32931</h2>
+            <h6>Oct 12, 2019 - Oct 12, 2020</h6>
+            <p>$600 / month</p>
+            <p>Tenants: Bob Bobberson</p>
+            <p>Phone: (309) 429-0826</p>
+            <p>Email: boristotle@hotmail.com</p>
+          </ion-label>
+        </ion-item>
+        </ion-list>
       </ion-col>
+      <!-- <ion-col>
+        <ion-button routerLink="/bookings">Bookings</ion-button>
+      </ion-col> -->
     </ion-row>
   </ion-grid>
- 
 </ion-content>
