--- a/src/app/places/leases/new-lease/new-lease.page.html
+++ b/src/app/places/leases/new-lease/new-lease.page.html
@@ -60,13 +60,19 @@
             </ion-col>
         </ion-row>
         <ion-row>
-            <ion-col size-sm="6" offset-sm="0">
+            <ion-col size-sm="4" offset-sm="0">
+                <ion-item>
+                  <ion-label position="floating">Rent Amount</ion-label>
+                  <ion-input type="number" formControlName="rentAmount"></ion-input>
+                </ion-item>
+              </ion-col>
+            <ion-col size-sm="4" offset-sm="0">
               <ion-item>
                 <ion-label position="floating">Rent Due (day of month)</ion-label>
-                <ion-input type="number" formControlName="price"></ion-input>
+                <ion-input type="number" formControlName="rentDue"></ion-input>
               </ion-item>
             </ion-col>
-            <ion-col size-sm="6" offset-sm="0">
+            <ion-col size-sm="4" offset-sm="0">
                 <ion-item>
                   <ion-label position="floating">Deposit</ion-label>
                   <ion-input type="number" formControlName="deposit"></ion-input>
