--- a/src/app/places/notifications/notifications.page.html
+++ b/src/app/places/notifications/notifications.page.html
@@ -15,54 +15,26 @@
       <ion-segment-button value="all" checked>All Places</ion-segment-button>
       <ion-segment-button value="bookable">Bookable Places</ion-segment-button>
     </ion-segment> -->
-    <ion-grid *ngIf="!relevantPlaces || relevantPlaces.length <= 0">
+    <!-- {{ (notifications$ | async) | json }} -->
+    <ion-grid *ngIf="(notifications$ | async)?.length === []">
       <ion-row>
         <ion-col size="12" size-sm="8" offset-sm="2" text-center>
           <p>There are no notifications right now, please come back later!</p>
         </ion-col>
       </ion-row>
     </ion-grid>
-    <ion-grid *ngIf="relevantPlaces.length > 0">
-      <!-- <ion-row>
-        <ion-col size="12" size-sm="8" offset-sm="2" text-center>
-          <ion-card>
-            <ion-card-header>
-              <ion-card-title> {{relevantPlaces[0].title }}</ion-card-title>
-              <ion-card-subtitle>{{relevantPlaces[0].price | currency }} / Night</ion-card-subtitle>
-              <ion-img [src]="relevantPlaces[0].imageUrl"></ion-img>
-              <ion-card-content>
-                <p>{{relevantPlaces[0].description}}</p>
-              </ion-card-content>
-              <div text-right>
-                <ion-button 
-                fill="clear" 
-                color="primary" 
-                [routerLink]="[
-                  '/', 
-                  'places', 
-                  'tabs', 
-                  'discover', 
-                  relevantPlaces[0].id
-                ]"
-                >
-                More
-              </ion-button>
-              </div>
-            </ion-card-header>
-          </ion-card>
-        </ion-col>
-      </ion-row> -->
+    <ion-grid>
       <ion-row>
         <ion-col size="12" size-sm="12" offset-sm="0" text-center>
           <ion-list>
-          <ion-item *ngFor="let place of loadedPlaces.slice(1)"
-              [routerLink]="['/', 'places', 'tabs', 'notifications', place.id ]" detail >
+          <ion-item *ngFor="let notification of (notifications$ | async)"
+              [routerLink]="['/', 'places', 'tabs', 'notifications', notification.id ]" detail >
             <!-- <ion-thumbnail slot="start">
-              <ion-img [src]="place.imageUrl"></ion-img>
+              <ion-img [src]="notification.imageUrl"></ion-img>
             </ion-thumbnail> -->
             <ion-label>
-              <h2>{{place.title}}</h2>
-              <p>{{place.description}}</p>
+              <h2>{{notification.category}}</h2>
+              <p>{{notification.description}}</p>
             </ion-label>
           </ion-item>
           </ion-list>
