--- a/src/app/places/properties/edit-property/edit-property.page.html
+++ b/src/app/places/properties/edit-property/edit-property.page.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button [defaultHref]="'/places/tabs/offers' + placeId"></ion-back-button>
+      <ion-back-button [defaultHref]="'/places/tabs/properties' + placeId"></ion-back-button>
     </ion-buttons>
     <ion-title>Edit Button</ion-title>
     <ion-buttons slot="primary">
-      <ion-button *ngIf="form" (click)="onUpdateOffer()" [disabled]="!form.valid">
+      <ion-button *ngIf="form" (click)="onUpdateProperty()" [disabled]="!form.valid">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
