--- a/src/app/places/properties/properties.page.html
+++ b/src/app/places/properties/properties.page.html
@@ -17,10 +17,10 @@
     <ion-row>
       <ion-col size="12" size-sm="12" offset-sm="0">
         <ion-list>
-          <ion-item-sliding *ngFor="let offer of offers" #slidingItem>
-           <app-proeprty-item [offer]="offer"></app-property-item>
+          <ion-item-sliding *ngFor="let property of properties" #slidingItem>
+           <app-property-item [property]="property"></app-property-item>
           <ion-item-options side="end">
-            <ion-item-option color="secondary" (click)="onEdit(offer.id, slidingItem)">
+            <ion-item-option color="secondary" (click)="onEdit(property.id, slidingItem)">
               <ion-icon name="create" slot="icon-only"></ion-icon>
             </ion-item-option>
           </ion-item-options>
