--- a/src/app/places/properties/property-item/property-item.component.scss
+++ b/src/app/places/properties/property-item/property-item.component.scss
@@ -6,7 +6,7 @@
 //     color: var(--ion-color-primary);
 // }
 
-.offer-details {
+.property-details {
     display:flex;
     align-items: center;
     font-size:12px;
