--- a/src/app/places/properties/property-item/property-item.component.html
+++ b/src/app/places/properties/property-item/property-item.component.html
@@ -3,13 +3,13 @@
     <ion-img [src]="property.imageUrl"></ion-img>
   </ion-thumbnail>
   <ion-label>
-    <h1>{{property.title}}</h1>
+    <h1>{{property.propertyAddress}}</h1>
     <div class="property-details">
-      <ion-icon name="calendar" color="secondary"></ion-icon>
-      <ion-text color="tertiary" class="space-left">{{property.availableFrom | date}}</ion-text>
+      <!-- <ion-icon name="calendar" color="secondary"></ion-icon> -->
+      <!-- <ion-text color="tertiary" class="space-left">{{property.availableFrom | date}}</ion-text>
       <span class="space-left">to</span>
       <ion-icon name="calendar" class="space-left" color="secondary"></ion-icon>
-      <ion-text color="tertiary" class="space-left">{{property.availableTo | date}}</ion-text>
+      <ion-text color="tertiary" class="space-left">{{property.availableTo | date}}</ion-text> -->
     </div>
   </ion-label>
 </ion-item>
