--- a/src/app/places/properties/properties.page.html
+++ b/src/app/places/properties/properties.page.html
@@ -17,7 +17,7 @@
     <ion-row>
       <ion-col size="12" size-sm="12" offset-sm="0">
         <ion-list>
-          <ion-item-sliding *ngFor="let property of properties" #slidingItem>
+          <ion-item-sliding *ngFor="let property of (properties$ | async)" #slidingItem>
            <app-property-item [property]="property"></app-property-item>
           <ion-item-options side="end">
             <ion-item-option color="secondary" (click)="onEdit(property.id, slidingItem)">
