--- a/src/app/places/places.page.html
+++ b/src/app/places/places.page.html
@@ -12,6 +12,10 @@
         <ion-label>Leases</ion-label>
         <ion-icon name="home"></ion-icon>
     </ion-tab-button>
+    <ion-tab-button tab="tenants">
+        <ion-label>Tenants</ion-label>
+        <ion-icon name="people"></ion-icon>
+    </ion-tab-button>
     <!-- <ion-tab-button tab="properties">
         <ion-label>Open Service Requests</ion-label>
         <ion-icon name="home"></ion-icon>
