--- a/src/app/places/leases/new-lease/new-lease.page.html
+++ b/src/app/places/leases/new-lease/new-lease.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/tabs/leases"></ion-back-button>
     </ion-buttons>
-    <ion-title>New Lease (TODO: make dropdown list of available props)</ion-title>
+    <ion-title>New Lease</ion-title>
     <ion-buttons slot="primary">
       <ion-button (click)="onCreateLease()" [disabled]="!form.valid">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
@@ -19,18 +19,10 @@
         <ion-col size-sm="12" offset-sm="0">
           <ion-item>
             <ion-label position="floating">Property Address (TODO: make dropdown list)</ion-label>
-            <ion-input type="text" autocomplete autocorrect formControlName="title"></ion-input>
+            <ion-input type="text" autocomplete autocorrect formControlName="propertyAddress"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
-      <!-- <ion-row>
-        <ion-col size-sm="12" offset-sm="0">
-            <ion-item>
-              <ion-label position="floating">Purchase Price</ion-label>
-                <ion-input type="number" formControlName="price"></ion-input>
-              </ion-item>
-        </ion-col>
-      </ion-row> -->
       <!-- <ion-row *ngIf="!form.get('description').valid && form.get('description').touched">
         <ion-col size-sm="6" offset-sm="3">
           <p>Description must be between 1 and 180 characters</p>
@@ -78,12 +70,6 @@
                   <ion-input type="number" formControlName="deposit"></ion-input>
                 </ion-item>
               </ion-col>
-            <!-- <ion-col size-sm="3" offset-sm="3">
-                <ion-item>
-                  <ion-label position="floating">Rent Late After</ion-label>
-                  <ion-input type="number" formControlName="lateDays"></ion-input> days
-                </ion-item>
-              </ion-col> -->
           </ion-row>
         <ion-row>
             <ion-col size-sm="6" offset-sm="0">
