--- a/src/app/places/properties/new-property/new-property.page.html
+++ b/src/app/places/properties/new-property/new-property.page.html
@@ -22,13 +22,13 @@
     </ion-row>
 </ion-grid>
 
-<form [formGroup]= "form">
+<form [formGroup]="form">
     <ion-grid>
     <ion-row>
         <ion-col size-sm="12" offset-sm="0">
         <ion-item>
             <ion-label position="floating">Property Address</ion-label>
-            <ion-input type="text" autocomplete autocorrect formControlName="title"></ion-input>
+            <ion-input type="text" autocomplete autocorrect formControlName="propertyAddress"></ion-input>
         </ion-item>
         </ion-col>
     </ion-row>
@@ -36,7 +36,7 @@
         <ion-col size-sm="6" offset-sm="0">
             <ion-item>
             <ion-label position="floating">Purchase Price</ion-label>
-                <ion-input type="number" formControlName="price"></ion-input>
+                <ion-input type="number" formControlName="purchasePrice"></ion-input>
             </ion-item>
         </ion-col>
         <ion-col size-sm="6" offset-sm="0">
@@ -46,14 +46,14 @@
             </ion-item>
         </ion-col>
     </ion-row>
-    <ion-row>
+    <!-- <ion-row>
         <ion-col size-sm="12" offset-sm="0">
             <ion-item>
             <ion-label position="floating">Description</ion-label>
             <ion-textarea rows="3" formControlName="description"></ion-textarea>
             </ion-item>
         </ion-col>
-    </ion-row>
+    </ion-row> -->
     <ion-row>
         <ion-col size-sm="12" offset-sm="0">
             <ion-item>
