--- a/src/app/places/properties/edit-property/edit-property.page.html
+++ b/src/app/places/properties/edit-property/edit-property.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
         <ion-back-button defaultHref="/places/tabs/properties"></ion-back-button>
         </ion-buttons>
-        <ion-title>Update {{ property?.propertyAddress }}</ion-title>
+        <ion-title *ngIf="property">Update {{ property.propertyAddress }}</ion-title>
         <ion-buttons slot="primary">
             <ion-button (click)="onUpdateProperty()" [disabled]="form && !form.valid">
                 <ion-icon name="checkmark" slot="icon-only"></ion-icon>
