--- a/src/app/places/properties/property-details/property-details.page.html
+++ b/src/app/places/properties/property-details/property-details.page.html
@@ -3,111 +3,90 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/tabs/properties"></ion-back-button>
     </ion-buttons>
-    <ion-title>{{place?.propertyAddress}}</ion-title>
+    <ion-title *ngIf="property">{{property.propertyAddress}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<!-- <ion-content padding>
-  <ion-button margin color="primary" [routerLink]="['/', 'places', 'tabs', 'properties', 'edit', placeId]">Edit</ion-button>
-  <ion-button margin color="primary" [routerLink]="['/', 'places', 'tabs', 'properties', 'edit', placeId]">Add Lease</ion-button>
-  <ion-button margin color="primary" [routerLink]="['/', 'places', 'tabs', 'properties', 'edit', placeId]">Add Expense</ion-button>
-  <ion-button margin color="primary" [routerLink]="['/', 'places', 'tabs', 'properties', 'edit', placeId]">Add Document</ion-button>
-</ion-content> -->
+<!-- <ion-button margin color="primary" [routerLink]="['/', 'places', 'tabs', 'properties', 'edit', placeId]">Edit</ion-button> -->
 
 <ion-content>
-    <ion-grid>
-      <ion-row>
-        <ion-col size-md="12" offset-md="0">
-          <ion-list>
-              <ion-item-sliding>
-                <ion-item [routerLink]="['/', 'places', 'tabs', 'properties', 'edit', placeId]">
-                    Edit Property
+  <ion-card *ngIf="property">
+      <ion-list>
+          <ion-item-sliding>
+            <ion-item [routerLink]="['/', 'places', 'tabs', 'properties', 'edit', propertyId]">
+                Edit Property
+            </ion-item>
+          </ion-item-sliding>
+          <ion-item-sliding>
+              <ion-item [routerLink]="['/', 'places', 'tabs', 'leases', 'new']">
+                  Add Lease
+              </ion-item>
+            </ion-item-sliding>
+            <ion-item-sliding>
+                <ion-item [routerLink]="['/', 'places', 'tabs', 'properties', 'expense']">
+                    Add Expense
                 </ion-item>
               </ion-item-sliding>
               <ion-item-sliding>
-                  <ion-item [routerLink]="['/', 'places', 'tabs', 'leases', 'new']">
-                      Add Lease
-                  </ion-item>
-                </ion-item-sliding>
-                <ion-item-sliding>
-                    <ion-item [routerLink]="['/', 'places', 'tabs', 'properties', 'expense']">
-                        Add Expense
-                    </ion-item>
-                  </ion-item-sliding>
-                  <ion-item-sliding>
-                    <ion-item [routerLink]="['/', 'places', 'tabs', 'properties', 'document']">
-                        Add Document
-                    </ion-item>
-                  </ion-item-sliding>
-            </ion-list>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-
-    <ion-grid no-padding>
-      <ion-row>
-          <ion-col size-sm="6" offset-sm="3" text-center>
-            <strong>Current Lease</strong>
-          </ion-col>
-      </ion-row>
-    </ion-grid>
-
-    <ion-grid>
-    <ion-row>
-        <ion-col size="12" size-sm="12" offset-sm="0" text-center>
-          <ion-list>
-          <ion-item
-              [routerLink]="['/', 'places', 'tabs', 'leases', leaseId ]" detail >
-            <!-- <ion-thumbnail slot="start">
-              <ion-img [src]="place.imageUrl"></ion-img>
-            </ion-thumbnail> -->
-            <ion-label text-center>
-              <h2>Oct 12, 2019 - Oct 12, 2020</h2>
-              <p>$600 / month</p>
-              <p>Tenants: Bob Bobberson</p>
-              <p>Phone: (309) 429-0826</p>
-              <p>Email: boristotle@hotmail.com</p>
-            </ion-label>
-          </ion-item>
-          </ion-list>
-        </ion-col>
-        <!-- <ion-col>
-          <ion-button routerLink="/bookings">Bookings</ion-button>
-        </ion-col> -->
-      </ion-row>
-    </ion-grid>
-
-    <ion-grid no-padding>
-        <ion-row>
-            <ion-col size-sm="6" offset-sm="3" text-center>
-              <strong>Past Leases</strong>
-            </ion-col>
-        </ion-row>
-      </ion-grid>
-
-      <ion-grid>
-          <ion-row>
-              <ion-col size="12" size-sm="12" offset-sm="0" text-center>
-                <ion-list>
-                <ion-item
-                    [routerLink]="['/', 'places', 'tabs', 'leases', leaseId ]" detail>
-                  <!-- <ion-thumbnail slot="start">
-                    <ion-img [src]="place.imageUrl"></ion-img>
-                  </ion-thumbnail> -->
-                  <ion-label text-center>
-                    <h2>Jan 12, 2017 - Jan 12, 2018</h2>
-                    <p>$600 / month</p>
-                    <p>Tenants: Fred Fredrickson</p>
-                    <p>Phone: (309) 555-5566</p>
-                    <p>Email: fred@hotmail.com</p>
-                  </ion-label>
+                <ion-item [routerLink]="['/', 'places', 'tabs', 'properties', 'document']">
+                    Add Document
                 </ion-item>
-                </ion-list>
-              </ion-col>
-              <!-- <ion-col>
-                <ion-button routerLink="/bookings">Bookings</ion-button>
-              </ion-col> -->
-            </ion-row>
-          </ion-grid>
-   
-  </ion-content>
+              </ion-item-sliding>
+        </ion-list>
+      <ion-card-header padding>
+        <ion-card-subtitle text-center>Details</ion-card-subtitle>
+      </ion-card-header>
+      <ion-item>
+          <ion-label>Purchase Price</ion-label>
+          <ion-text fill="outline" slot="end">{{ property.purchasePrice }}</ion-text>
+      </ion-item>
+      <ion-item>
+          <ion-label>Purchase Date</ion-label>
+          <ion-text fill="outline" slot="end">{{ property.purchaseDate }}</ion-text>
+      </ion-item>
+      <ion-card-header padding>
+          <ion-card-subtitle text-center>Yearly Expenses</ion-card-subtitle>
+      </ion-card-header>
+      <ion-item>
+          <ion-label>Mortgage</ion-label>
+          <ion-text fill="outline" slot="end">{{ property.mortgage }}</ion-text>
+      </ion-item>
+      <ion-item>
+          <ion-label>Taxes</ion-label>
+          <ion-text fill="outline" slot="end">{{ property.taxes }}</ion-text>
+      </ion-item>
+      <ion-item>
+          <ion-label>Insurance</ion-label>
+          <ion-text fill="outline" slot="end">{{ property.insurance }}</ion-text>
+      </ion-item>
+      <ion-card-header padding>
+          <ion-card-subtitle text-center>Leases</ion-card-subtitle>
+      </ion-card-header>
+      <ion-item
+          [routerLink]="['/', 'places', 'tabs', 'leases', leaseId ]" detail >
+        <!-- <ion-thumbnail slot="start">
+          <ion-img [src]="place.imageUrl"></ion-img>
+        </ion-thumbnail> -->
+        <ion-label text-center>
+          <h2>Oct 12, 2019 - Oct 12, 2020</h2>
+          <p>$600 / month</p>
+          <p>Tenants: Bob Bobberson</p>
+          <p>Phone: (309) 429-0826</p>
+          <p>Email: boristotle@hotmail.com</p>
+        </ion-label>
+      </ion-item>
+      <ion-item
+      [routerLink]="['/', 'places', 'tabs', 'leases', leaseId ]" detail >
+      <!-- <ion-thumbnail slot="start">
+        <ion-img [src]="place.imageUrl"></ion-img>
+      </ion-thumbnail> -->
+      <ion-label text-center>
+        <h2>Oct 12, 2019 - Oct 12, 2020</h2>
+        <p>$600 / month</p>
+        <p>Tenants: Bob Bobberson</p>
+        <p>Phone: (309) 429-0826</p>
+        <p>Email: boristotle@hotmail.com</p>
+      </ion-label>
+    </ion-item>
+  </ion-card>
+</ion-content>
