--- a/src/app/places/tenants/tenant-details/tenant-details.page.html
+++ b/src/app/places/tenants/tenant-details/tenant-details.page.html
@@ -1,21 +1,40 @@
+
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-menu-button menu="m1"></ion-menu-button>
+        <ion-back-button defaultHref="/places/tabs/tenants"></ion-back-button>
         </ion-buttons>
-        <ion-title>Tenants</ion-title>
-        <ion-buttons slot="primary">
-            <ion-button routerLink="/places/tabs/tenants/new">
-                <ion-icon name="add" slot="icon-only"></ion-icon>
-            </ion-button>
-        </ion-buttons>
+        <ion-title>{{ (tenant$ | async)?.name}}</ion-title>
     </ion-toolbar>
 </ion-header>
-
-<ion-content>
-    <ion-grid>
-        <ion-row>
-            {{ (tenant$ | async)?.name }}
-        </ion-row>
-    </ion-grid>
-</ion-content>
+      
+      <!-- <ion-button margin color="primary" [routerLink]="['/', 'places', 'tabs', 'properties', 'edit', placeId]">Edit</ion-button> -->
+      
+      <ion-content *ngIf="(tenant$ | async) as tenant">
+        <ion-card>
+            <!-- <ion-img [src]="item.src"></ion-img> -->
+            <ion-card-header padding>
+              <ion-card-subtitle text-center>Details</ion-card-subtitle>
+            </ion-card-header>
+            <ion-item>
+                <ion-label>Phone</ion-label>
+                <ion-text fill="outline" slot="end">{{ tenant.phone }}</ion-text>
+            </ion-item>
+            <ion-item>
+                <ion-label>Email</ion-label>
+                <ion-text fill="outline" slot="end">{{ tenant.email }}</ion-text>
+            </ion-item>
+            <ion-item>
+                <ion-label>SSN</ion-label>
+                <ion-text fill="outline" slot="end">{{ tenant.SSN }}</ion-text>
+            </ion-item>
+            <ion-item>
+                <ion-label>DOB</ion-label>
+                <ion-text fill="outline" slot="end">{{ tenant.DOB }}</ion-text>
+            </ion-item>
+            <ion-item>
+                <ion-label>Drivers License</ion-label>
+                <ion-text fill="outline" slot="end">{{ tenant.DL }}</ion-text>
+            </ion-item>
+        </ion-card>
+      </ion-content>
