--- a/src/app/places/leases/new-lease/new-lease.page.html
+++ b/src/app/places/leases/new-lease/new-lease.page.html
@@ -17,10 +17,16 @@
     <ion-grid>
       <ion-row>
         <ion-col size-sm="12" offset-sm="0">
-          <ion-item>
+          <!-- <ion-item>
             <ion-label position="floating">Property Address (TODO: make dropdown list)</ion-label>
             <ion-input type="text" autocomplete autocorrect formControlName="propertyAddress"></ion-input>
-          </ion-item>
+          </ion-item> -->
+          <ion-item *ngIf="(properties$ | async) as properties">
+              <ion-label>Property</ion-label>
+              <ion-select value="propertyId" okText="Okay" cancelText="Dismiss">
+                <ion-select-option *ngFor="let property of properties" [value]="property.id">{{property.propertyAddress}}</ion-select-option>
+              </ion-select>
+            </ion-item>
         </ion-col>
       </ion-row>
       <!-- <ion-row *ngIf="!form.get('description').valid && form.get('description').touched">
