--- a/src/app/places/tenants/tenant-details/tenant-details.page.html
+++ b/src/app/places/tenants/tenant-details/tenant-details.page.html
@@ -12,7 +12,7 @@
       
       <ion-content *ngIf="(tenant$ | async) as tenant">
         <ion-card>
-            <!-- <ion-img [src]="item.src"></ion-img> -->
+            <!-- <ion-img src="https://www.parisperfect.com/g/apartment-hero-images/hi_lalande-64-new.jpg"></ion-img> -->
             <ion-card-header padding>
               <ion-card-subtitle text-center>Details</ion-card-subtitle>
             </ion-card-header>
