--- a/src/app/places/properties/edit-property/edit-property.page.html
+++ b/src/app/places/properties/edit-property/edit-property.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
         <ion-back-button defaultHref="/places/tabs/properties"></ion-back-button>
         </ion-buttons>
-        <ion-title *ngIf="property">Update {{ property.propertyAddress }}</ion-title>
+        <ion-title *ngIf="property">Update {{ property.address }}</ion-title>
         <ion-buttons slot="primary">
             <ion-button (click)="onUpdateProperty()" [disabled]="form && !form.valid">
                 <ion-icon name="checkmark" slot="icon-only"></ion-icon>
@@ -13,88 +13,92 @@
 </ion-header>
       
 <ion-content padding>
-
-<ion-grid no-padding>
-    <ion-row>
-        <ion-col size-sm="6" offset-sm="3" text-center>
-            <strong>Details</strong>
-        </ion-col>
-    </ion-row>
-</ion-grid>
-
-<form *ngIf="property" [formGroup]="form">
+    <ion-grid no-padding>
+        <ion-row>
+            <ion-col size-sm="12" text-center>
+                <strong>Details</strong>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+    
+    <form [formGroup]="form">
+        <ion-grid>
+        <ion-row>
+            <ion-col size-sm="12" offset-sm="0">
+            <ion-item>
+                <ion-label position="floating">Property Address</ion-label>
+                <ion-input type="text" autocomplete autocorrect formControlName="address"></ion-input>
+            </ion-item>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col size-sm="12" offset-sm="0">
+                <ion-item>
+                <ion-label position="floating">Purchase Price</ion-label>
+                    <ion-input type="number" formControlName="purchasePrice"></ion-input>
+                </ion-item>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col size-sm="12" offset-sm="0">
+                <ion-item>
+                <ion-label position="floating">Purchase Date</ion-label>
+                <ion-datetime min="2019-01-01" max="2099-12-31" formControlName="purchaseDate"></ion-datetime>
+                </ion-item>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+                <ion-col size-sm="12" offset-sm="0">
+                    <ion-item>
+                    <ion-label position="floating">Home Value</ion-label>
+                        <ion-input type="number" formControlName="homeValue"></ion-input>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+        <ion-row>
+            <ion-col size-sm="12" offset-sm="0">
+                <ion-item>
+                    Upload Photos
+                </ion-item>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+    
+    <ion-grid padding>
+        <ion-row>
+            <ion-col size-sm="12" text-center>
+                <strong>Yearly Expenses</strong>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+        
     <ion-grid>
-    <ion-row>
-        <ion-col size-sm="12" offset-sm="0">
-        <ion-item>
-            <ion-label position="floating">Property Address</ion-label>
-            <ion-input type="text" autocomplete autocorrect formControlName="propertyAddress"></ion-input>
-        </ion-item>
-        </ion-col>
-    </ion-row>
-    <ion-row>
-        <ion-col size-sm="6" offset-sm="0">
-            <ion-item>
-            <ion-label position="floating">Purchase Price</ion-label>
-                <ion-input type="number" formControlName="purchasePrice"></ion-input>
+        <ion-row>
+            <ion-col size-sm="12" offset-sm="0">
+                <ion-item>
+                <ion-label position="floating">Mortgage</ion-label>
+                    <ion-input type="number" formControlName="mortgage"></ion-input>
+                </ion-item>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col size-sm="12" offset-sm="0">
+                <ion-item>
+                <ion-label position="floating">Taxes</ion-label>
+                <ion-input type="number" formControlName="taxes"></ion-input>
             </ion-item>
-        </ion-col>
-        <ion-col size-sm="6" offset-sm="0">
-            <ion-item>
-            <ion-label position="floating">Purchase Date</ion-label>
-            <ion-datetime min="2019-01-01" max="2099-12-31" formControlName="purchaseDate"></ion-datetime>
-            </ion-item>
-        </ion-col>
-    </ion-row>
-    <!-- <ion-row>
-        <ion-col size-sm="12" offset-sm="0">
-            <ion-item>
-            <ion-label position="floating">Description</ion-label>
-            <ion-textarea rows="3" formControlName="description"></ion-textarea>
-            </ion-item>
-        </ion-col>
-    </ion-row> -->
-    <ion-row>
-        <ion-col size-sm="12" offset-sm="0">
-            <ion-item>
-                Upload Photos
-            </ion-item>
-        </ion-col>
-    </ion-row>
-</ion-grid>
-
-<ion-grid padding>
-    <ion-row>
-        <ion-col size-sm="6" offset-sm="3" text-center>
-            <strong>Monthly Expenses</strong>
-        </ion-col>
-    </ion-row>
-</ion-grid>
-  
-<ion-grid>
-    <ion-row>
-        <ion-col size-sm="6" offset-sm="0">
-            <ion-item>
-            <ion-label position="floating">Mortgage</ion-label>
-                <ion-input type="number" formControlName="mortgage"></ion-input>
-            </ion-item>
-        </ion-col>
-        <ion-col size-sm="6" offset-sm="0">
-            <ion-item>
-            <ion-label position="floating">Taxes</ion-label>
-            <ion-input type="number" formControlName="taxes"></ion-input>
-        </ion-item>
-        </ion-col>
-    </ion-row>
-    <ion-row>
-        <ion-col size-sm="6" offset-sm="0">
-            <ion-item>
-            <ion-label position="floating">Insurance</ion-label>
-                <ion-input type="number" formControlName="insurance"></ion-input>
-            </ion-item>
-        </ion-col>
-    </ion-row>
-</ion-grid>
-  
-</form>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col size-sm="12" offset-sm="0">
+                <ion-item>
+                <ion-label position="floating">Insurance</ion-label>
+                    <ion-input type="number" formControlName="insurance"></ion-input>
+                </ion-item>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+        
+    </form>
 </ion-content>
+        
