--- a/src/app/places/leases/new-lease/new-lease.page.html
+++ b/src/app/places/leases/new-lease/new-lease.page.html
@@ -17,14 +17,10 @@
     <ion-grid>
       <ion-row>
         <ion-col size-sm="12" offset-sm="0">
-          <!-- <ion-item>
-            <ion-label position="floating">Property Address (TODO: make dropdown list)</ion-label>
-            <ion-input type="text" autocomplete autocorrect formControlName="propertyAddress"></ion-input>
-          </ion-item> -->
           <ion-item *ngIf="(properties$ | async) as properties">
               <ion-label>Property</ion-label>
               <ion-select value="propertyId" okText="Okay" cancelText="Dismiss">
-                <ion-select-option *ngFor="let property of properties" [value]="property.id">{{property.propertyAddress}}</ion-select-option>
+                <ion-select-option *ngFor="let property of properties" [value]="property.id">{{property.address}}</ion-select-option>
               </ion-select>
             </ion-item>
         </ion-col>
@@ -34,23 +30,17 @@
           <p>Description must be between 1 and 180 characters</p>
         </ion-col>
       </ion-row> -->
-      <!-- <ion-row>
-        <ion-col size-sm="12" offset-sm="0">
-            <ion-item>
-              <ion-label position="floating">Description</ion-label>
-              <ion-textarea rows="3" formControlName="description"></ion-textarea>
-            </ion-item>
-        </ion-col>
-      </ion-row> -->
 
       <ion-row>
-          <ion-col size-sm="6" offset-sm="0">
+          <ion-col size-sm="12" offset-sm="0">
             <ion-item>
               <ion-label position="floating">Lease Start</ion-label>
               <ion-datetime min="2019-01-01" max="2025-12-31" formControlName="leaseStart"></ion-datetime>
             </ion-item>
           </ion-col>
-          <ion-col size-sm="6" offset-sm="0">
+      </ion-row>
+      <ion-row>
+          <ion-col size-sm="12" offset-sm="0">
               <ion-item>
                 <ion-label position="floating">Lease End</ion-label>
                 <ion-datetime min="2019-01-02" max="2025-12-31" formControlName="leaseEnd"></ion-datetime>
@@ -58,19 +48,23 @@
             </ion-col>
         </ion-row>
         <ion-row>
-            <ion-col size-sm="4" offset-sm="0">
+            <ion-col size-sm="12" offset-sm="0">
                 <ion-item>
                   <ion-label position="floating">Rent Amount</ion-label>
                   <ion-input type="number" formControlName="rentAmount"></ion-input>
                 </ion-item>
               </ion-col>
-            <ion-col size-sm="4" offset-sm="0">
+        </ion-row>
+        <ion-row>
+            <ion-col size-sm="12" offset-sm="0">
               <ion-item>
-                <ion-label position="floating">Rent Due (day of month)</ion-label>
+                <ion-label position="floating">Rent Due (day)</ion-label>
                 <ion-input type="number" formControlName="rentDue"></ion-input>
               </ion-item>
             </ion-col>
-            <ion-col size-sm="4" offset-sm="0">
+          </ion-row>
+          <ion-row>
+            <ion-col size-sm="12" offset-sm="0">
                 <ion-item>
                   <ion-label position="floating">Deposit</ion-label>
                   <ion-input type="number" formControlName="deposit"></ion-input>
@@ -78,15 +72,17 @@
               </ion-col>
           </ion-row>
         <ion-row>
-            <ion-col size-sm="6" offset-sm="0">
+            <ion-col size-sm="12" offset-sm="0">
               <ion-item>
                 <ion-label position="floating">Late Fee (daily)</ion-label>
-                <ion-datetime min="2019-01-01" max="2025-12-31" formControlName="lateFee"></ion-datetime>
+                <ion-input type="number" formControlName="lateFee"></ion-input>
               </ion-item>
             </ion-col>
-            <ion-col size-sm="6" offset-sm="0">
+          </ion-row>
+          <ion-row>
+            <ion-col size-sm="12" offset-sm="0">
                 <ion-item>
-                  <ion-label position="floating">Rent Late After (days)</ion-label>
+                  <ion-label position="floating">Rent Late After (# days)</ion-label>
                   <ion-input type="number" formControlName="lateDays"></ion-input>
                 </ion-item>
               </ion-col>
