--- a/src/app/places/properties/new-property/new-property.page.html
+++ b/src/app/places/properties/new-property/new-property.page.html
@@ -16,7 +16,7 @@
 
 <ion-grid no-padding>
     <ion-row>
-        <ion-col size-sm="6" offset-sm="3" text-center>
+        <ion-col size-sm="12" text-center>
             <strong>Details</strong>
         </ion-col>
     </ion-row>
@@ -28,32 +28,34 @@
         <ion-col size-sm="12" offset-sm="0">
         <ion-item>
             <ion-label position="floating">Property Address</ion-label>
-            <ion-input type="text" autocomplete autocorrect formControlName="propertyAddress"></ion-input>
+            <ion-input type="text" autocomplete autocorrect formControlName="address"></ion-input>
         </ion-item>
         </ion-col>
     </ion-row>
     <ion-row>
-        <ion-col size-sm="6" offset-sm="0">
+        <ion-col size-sm="12" offset-sm="0">
             <ion-item>
             <ion-label position="floating">Purchase Price</ion-label>
                 <ion-input type="number" formControlName="purchasePrice"></ion-input>
             </ion-item>
         </ion-col>
-        <ion-col size-sm="6" offset-sm="0">
+    </ion-row>
+    <ion-row>
+        <ion-col size-sm="12" offset-sm="0">
             <ion-item>
             <ion-label position="floating">Purchase Date</ion-label>
             <ion-datetime min="2019-01-01" max="2099-12-31" formControlName="purchaseDate"></ion-datetime>
             </ion-item>
         </ion-col>
     </ion-row>
-    <!-- <ion-row>
-        <ion-col size-sm="12" offset-sm="0">
-            <ion-item>
-            <ion-label position="floating">Description</ion-label>
-            <ion-textarea rows="3" formControlName="description"></ion-textarea>
-            </ion-item>
-        </ion-col>
-    </ion-row> -->
+    <ion-row>
+            <ion-col size-sm="12" offset-sm="0">
+                <ion-item>
+                <ion-label position="floating">Home Value</ion-label>
+                    <ion-input type="number" formControlName="homeValue"></ion-input>
+                </ion-item>
+            </ion-col>
+        </ion-row>
     <ion-row>
         <ion-col size-sm="12" offset-sm="0">
             <ion-item>
@@ -65,21 +67,23 @@
 
 <ion-grid padding>
     <ion-row>
-        <ion-col size-sm="6" offset-sm="3" text-center>
-            <strong>Monthly Expenses</strong>
+        <ion-col size-sm="12" text-center>
+            <strong>Yearly Expenses</strong>
         </ion-col>
     </ion-row>
 </ion-grid>
   
 <ion-grid>
     <ion-row>
-        <ion-col size-sm="6" offset-sm="0">
+        <ion-col size-sm="12" offset-sm="0">
             <ion-item>
             <ion-label position="floating">Mortgage</ion-label>
                 <ion-input type="number" formControlName="mortgage"></ion-input>
             </ion-item>
         </ion-col>
-        <ion-col size-sm="6" offset-sm="0">
+    </ion-row>
+    <ion-row>
+        <ion-col size-sm="12" offset-sm="0">
             <ion-item>
             <ion-label position="floating">Taxes</ion-label>
             <ion-input type="number" formControlName="taxes"></ion-input>
@@ -87,7 +91,7 @@
         </ion-col>
     </ion-row>
     <ion-row>
-        <ion-col size-sm="6" offset-sm="0">
+        <ion-col size-sm="12" offset-sm="0">
             <ion-item>
             <ion-label position="floating">Insurance</ion-label>
                 <ion-input type="number" formControlName="insurance"></ion-input>
