--- a/src/app/places/properties/property-item/property-item.component.html
+++ b/src/app/places/properties/property-item/property-item.component.html
@@ -3,7 +3,7 @@
     <ion-img [src]="property.imageUrl"></ion-img>
   </ion-thumbnail>
   <ion-label>
-    <h1>{{property.propertyAddress}}</h1>
+    <h1>{{property.address}}</h1>
     <div class="property-details">
       <!-- <ion-icon name="calendar" color="secondary"></ion-icon> -->
       <!-- <ion-text color="tertiary" class="space-left">{{property.availableFrom | date}}</ion-text>
