--- a/src/app/places/places.page.html
+++ b/src/app/places/places.page.html
@@ -16,6 +16,10 @@
         <ion-label>Tenants</ion-label>
         <ion-icon name="people"></ion-icon>
     </ion-tab-button>
+    <ion-tab-button tab="expenses">
+        <ion-label>Expenses</ion-label>
+        <!-- <ion-icon name="money"></ion-icon> -->
+    </ion-tab-button>
     <!-- <ion-tab-button tab="properties">
         <ion-label>Open Service Requests</ion-label>
         <ion-icon name="home"></ion-icon>
