--- a/src/app/places/tenants/tenant-details/tenant-details.page.html
+++ b/src/app/places/tenants/tenant-details/tenant-details.page.html
@@ -29,7 +29,7 @@
                 <ion-text fill="outline" slot="end">{{ tenant.SSN }}</ion-text>
             </ion-item>
             <ion-item>
-                <ion-label>DOB</ion-label>
+                <ion-label>Date of Birth</ion-label>
                 <ion-text fill="outline" slot="end">{{ tenant.DOB }}</ion-text>
             </ion-item>
             <ion-item>
