--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,12 @@
     </ion-header>
     <ion-content>
         <ion-list>
+            <ion-menu-toggle menu="m1">
+              <ion-item lines="none" routerLink="/places/tabs/expenses" button>
+                <ion-icon name="checkbox-outline" slot="start"></ion-icon>
+                <ion-label>Expenses</ion-label>
+              </ion-item>
+            </ion-menu-toggle>
           <ion-menu-toggle menu="m1">
             <ion-item lines="none" routerLink="/places/tabs/notifications" button>
               <ion-icon name="notifications" slot="start"></ion-icon>
