--- a/src/app/places/leases/edit-lease/edit-lease.page.html
+++ b/src/app/places/leases/edit-lease/edit-lease.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>Edit Lease</ion-title>
     <ion-buttons slot="primary">
-      <ion-button (click)="onCreateLease()" [disabled]="!form.valid">
+      <ion-button (click)="onEditLease()" [disabled]="form && !form.valid">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -16,13 +16,15 @@
   <form [formGroup]= "form">
     <ion-grid>
       <ion-row>
-        <ion-col size-sm="12" offset-sm="0">
-          <ion-item>
-            <ion-label position="floating">Property Address (TODO: make dropdown list)</ion-label>
-            <ion-input type="text" autocomplete autocorrect formControlName="title"></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
+          <ion-col size-sm="12" offset-sm="0">
+            <ion-item *ngIf="(properties$ | async) as properties">
+                <ion-label>Address</ion-label>
+                <ion-select value="propertyId" okText="Okay" cancelText="Dismiss">
+                  <ion-select-option *ngFor="let property of properties" [value]="property.id">{{property.address}}</ion-select-option>
+                </ion-select>
+              </ion-item>
+          </ion-col>
+        </ion-row>
       <ion-row>
           <ion-col size-sm="12" offset-sm="0">
             <ion-item>
