--- a/src/app/places/leases/leases.page.html
+++ b/src/app/places/leases/leases.page.html
@@ -4,11 +4,11 @@
         <ion-menu-button menu="m1"></ion-menu-button>
       </ion-buttons>
       <ion-title>Active Leases</ion-title>
-      <ion-buttons slot="primary">
-        <ion-button routerLink="/places/tabs/leases/new">
+      <!-- <ion-buttons slot="primary"> -->
+        <!-- <ion-button routerLink="/places/tabs/leases/new">
           <ion-icon name="add" slot="icon-only"></ion-icon>
-        </ion-button>
-      </ion-buttons>
+        </ion-button> -->
+      <!-- </ion-buttons> -->
     </ion-toolbar>
   </ion-header>
 
