--- a/src/app/places/leases/new-lease/new-lease.page.html
+++ b/src/app/places/leases/new-lease/new-lease.page.html
@@ -18,7 +18,7 @@
       <ion-row>
         <ion-col size-sm="12" offset-sm="0">
           <ion-item *ngIf="(properties$ | async) as properties">
-              <ion-label>Property</ion-label>
+              <ion-label>Address</ion-label>
               <ion-select value="propertyId" okText="Okay" cancelText="Dismiss">
                 <ion-select-option *ngFor="let property of properties" [value]="property.id">{{property.address}}</ion-select-option>
               </ion-select>
