--- a/src/app/places/properties/edit-property/edit-property.page.html
+++ b/src/app/places/properties/edit-property/edit-property.page.html
@@ -21,7 +21,7 @@
         </ion-row>
     </ion-grid>
     
-    <form [formGroup]="form">
+    <form *ngIf="property" [formGroup]="form">
         <ion-grid>
         <ion-row>
             <ion-col size-sm="12" offset-sm="0">
@@ -43,7 +43,7 @@
             <ion-col size-sm="12" offset-sm="0">
                 <ion-item>
                 <ion-label position="floating">Purchase Date</ion-label>
-                <ion-datetime min="2019-01-01" max="2099-12-31" formControlName="purchaseDate"></ion-datetime>
+                <ion-datetime min="1950-01-01" max="2099-12-31" formControlName="purchaseDate"></ion-datetime>
                 </ion-item>
             </ion-col>
         </ion-row>
