expenses details and new expense

--- a/src/app/places/notifications/notifications.page.html
+++ b/src/app/places/notifications/notifications.page.html
@@ -11,6 +11,7 @@
 </ion-header>
 
 <ion-content>
+  ADD FILTER BY TYPE HERE
     <!-- <ion-segment (ionChange)="onFilterUpdate($event)">
       <ion-segment-button value="all" checked>All Places</ion-segment-button>
       <ion-segment-button value="bookable">Bookable Places</ion-segment-button>
