--- a/src/app/places/expenses/expenses.page.html
+++ b/src/app/places/expenses/expenses.page.html
@@ -1,18 +1,30 @@
 <ion-header>
-        <ion-toolbar>
-            <ion-buttons slot="start">
-            <ion-menu-button menu="m1"></ion-menu-button>
-            </ion-buttons>
-            <ion-title>Expenses</ion-title>
-            <ion-buttons slot="primary">
-            <ion-button routerLink="/places/tabs/expenses/new">
-                <ion-icon name="add" slot="icon-only"></ion-icon>
-            </ion-button>
-            </ion-buttons>
-        </ion-toolbar>
-    </ion-header>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+        <ion-menu-button menu="m1"></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Expenses</ion-title>
+        <ion-buttons slot="primary">
+        <ion-button routerLink="/places/tabs/expenses/new">
+            <ion-icon name="add" slot="icon-only"></ion-icon>
+        </ion-button>
+        </ion-buttons>
+    </ion-toolbar>
+</ion-header>
         
         <ion-content>
+            ADD FILTER BY CATEGORY HERE
+        <!-- <ion-row>
+            <ion-col size-sm="12" offset-sm="0">
+                <ion-item *ngIf="(properties$ | async) as properties">
+                    <ion-label></ion-label>
+                    <ion-select value="propertyId" okText="Okay" cancelText="Dismiss">
+                    <ion-select-option *ngFor="let property of properties" [value]="property.id">{{property.address}}</ion-select-option>
+                    </ion-select>
+                </ion-item>
+            </ion-col>
+        </ion-row> -->
+
         <ion-grid>
             <ion-row>
             <ion-col size="12" size-sm="12" offset-sm="0">
@@ -23,7 +35,7 @@
                             <ion-img [src]="expense.imageUrl"></ion-img>
                         </ion-thumbnail> -->
                         <ion-label>
-                            <h4>{{expense.amount}}</h4>
+                            <h4>{{expense.amount | currency:'US'}}</h4>
                             <div class="expense-details">
                             <!-- <ion-icon name="calendar" color="secondary"></ion-icon> -->
                             <!-- <ion-text color="tertiary" class="space-left">{{tenant.availableFrom | date}}</ion-text>
